syntax = "proto3";

option csharp_namespace = "Server";

package rc;

message EmptyRequest {}

service AuthHand {
  rpc Login(LoginRequest) returns (TokensResponse);
  rpc Register(RegisterRequest) returns (TokensResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message TokensResponse {
  string access = 1;
  string refresh = 2;
}

service UserHand {
	rpc Users(EmptyRequest) returns (UsersResponse);
}

message UserResponse {
	int64 id = 1;
	string username = 2;
}

message UsersResponse {
	repeated UserResponse users = 1;
}